--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,8 @@ body {
   background-color: #d9dcd6;
 }
 
-/*Class Selector to set styles for the header[title of the webpage*/
-.header {
+/*Element Selector to set styles for the header[title of the webpage*/
+header {
   padding: 20px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
@@ -19,8 +19,8 @@ body {
   color: #ffffff;
 }
 
-/*Class selector to set style for the header and h1*/
-.header h1 {
+/*Element selector to set style for the header and h1*/
+header h1 {
   display: inline-block;
   font-size: 48px;
 }
@@ -31,8 +31,8 @@ body {
   color: #d9dcd6;
 }
 
-/*Class Selector to set style for the div that is inside of the header class*/
-.header div {
+/*Element Selector to set style for the nav element*/
+nav {
   padding-top: 15px;
   margin-right: 20px;
   float: right;
@@ -89,8 +89,8 @@ p {
     margin-left: 25px;
 }
 
-/*Class Selecto to set styles for the content class*/
-.content {
+/*Element Selecto to set styles for the main element*/
+main {
   width: 75%;
   display: inline-block;
   margin-left: 20px;
@@ -127,9 +127,9 @@ p {
   max-width: 150px;
 }
 
-/*Class Selector to set styles for div class inside of the content class*/
+/*Element Selector to set styles for section classes inside of the main element*/
 /*Eliminate unnessary classes and group other classes together that share the same styles*/
-.content div  {
+main section  {
     margin-bottom: 20px;
   padding: 50px;
   height: 300px;
@@ -138,21 +138,21 @@ p {
   color: #ffffff;
 }
 
-/*Class Selector to set up image size for the images inside of content class*/
-.content img{
+/*Element Selector to set up image size for the images inside of main element*/
+main img{
      max-height: 200px;
 }
 
 
-/*Class Selector to set styles for h2 inside of the content class*/
-.content h2{
+/*Element Selector to set styles for h2 inside of the main element*/
+main h2{
   margin-bottom: 20px;
   font-size: 36px;
 }
 
 
-/*Class Selector for footer to set styles*/
-.footer {
+/*Element Selector for footer to set styles*/
+footer {
   padding: 30px;
   clear: both;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
@@ -160,7 +160,7 @@ p {
   text-align: center;
 }
 
-/*Class Selector for h2 inside of the footer to set styles.*/
-.footer h2 {
+/*Element Selector for h2 inside of the footer to set styles.*/
+footer h2 {
   font-size: 20px;
 }
